--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "pg": "^8.11.5"
+    "@supabase/supabase-js": "^2.42.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
